--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
+  "platformdirs",
   "importlib-metadata; python_version < '3.8'",
 ]
 
