Acquiesce to ruff format convention and del flake8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,10 +38,13 @@ warn_no_return = false
 allow_untyped_globals = true
 allow_redefinition = true
 
+[tool.ruff.format]
+quote-style = "single"
+skip-magic-trailing-comma = true
+
 [tool.edit-lint]
 linters = [
   "ruff",
-  "flake8",
   "mypy",
   "pyright",
 ]
